# binary_chop

./: .gitignore  README.md  pyproject.toml
src/: day1.py  day2.py  day3.py  day4.py
tests/: test_day1.py  test_day2.py  test_day3.py  test_day4.py
